overflow fix

--- a/registration/registration.css
+++ b/registration/registration.css
@@ -91,7 +91,7 @@ div {
     line-height: 2em; 
 }
 
-.register {width: fit-content;margin-left: auto;margin-right: auto;font-size: 2.5em;padding: 0.8em;background-color: rgb(4 8 14 / 53%);}
+.register {width: fit-content;margin-left: auto;margin-right: auto;font-size: 2.5em;padding: 0.8em;margin-top: 0.5em;background-color: rgb(4 8 14 / 53%);}
 
 .head {
     font-size: 2em;
